// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdaptedInput should adapt cozy-ui input for react-final-form 1`] = `
<form
  onSubmit={[Function]}
>
  <input
    className="styles__c-input-text___3TAv1 styles__c-input-text--large___28EaR"
    data-valid={true}
    name="title"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="Hello"
  />
</form>
`;

exports[`AdaptedTextarea should adapt cozy-ui input for react-final-form 1`] = `
<form
  onSubmit={[Function]}
>
  <textarea
    className="styles__c-textarea___D7EEH"
    data-valid={true}
    name="description"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    value="Nostrum expedita qui rerum non est asperiores ratione."
  />
</form>
`;
